--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2018.8.13
 chardet==3.0.4
 idna==2.7
 oauthlib==2.1.0
-psycopg2==2.7.5
+psycopg2-binary==2.7.5
 PySocks==1.6.8
 pytz==2018.5
 requests==2.19.1
