--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+alembic==1.0.0
 certifi==2018.8.13
 chardet==3.0.4
 idna==2.7
+Mako==1.0.7
+MarkupSafe==1.0
 oauthlib==2.1.0
 psycopg2-binary==2.7.5
 PySocks==1.6.8
+python-dateutil==2.7.3
+python-editor==1.0.3
 pytz==2018.5
 requests==2.19.1
 requests-oauthlib==1.0.0
